[package]
name = "reusable_taproot_addresses"
version = "0.0.2"
edition = "2021"
authors = ["w0xlt <https://github.com/w0xlt>"]
description = "Reusable Taproot Addresses implementation"
repository = "https://github.com/w0xlt/reusable-taproot-addresses"
keywords = ["bitcoin", "taproot"]
readme = "README.md"
license = "CC0-1.0"

[dependencies]
secp256k1 = { version = "0.22.1", features = [ "rand-std", "bitcoin_hashes", "std" ] }